# amtech_integration

./: pyproject.toml  setup.py
amtech_integration/: hooks.py  modules.json  modules.txt
amtech_integration/amtech_integration/: api.py
amtech_integration/amtech_integration/client/: amtech_client.py
amtech_integration/amtech_integration/doctype/amtech_settings/: amtech_settings.js  amtech_settings.json  amtech_settings.py
amtech_integration/amtech_integration/doctype/amtech_sync_log/: amtech_sync_log.json  amtech_sync_log.py
amtech_integration/amtech_integration/fixtures/: custom_field.json
amtech_integration/amtech_integration/sync/: completion_poll.py  delivery_sync.py
amtech_integration/fixtures/: custom_field.json
amtech_integration/public/js/: delivery_note_amtech.js
